# Vision-based-Grasping-of-Objects-using-Symmetry

./: CMakeLists.txt  README.md  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/vbm_project_env/lib/vbm_project_env/: sample_object
install/vbm_project_env/share/ament_index/resource_index/package_run_dependencies/: vbm_project_env
install/vbm_project_env/share/ament_index/resource_index/parent_prefix_path/: vbm_project_env
install/vbm_project_env/share/vbm_project_env/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vbm_project_env/share/vbm_project_env/cmake/: vbm_project_envConfig-version.cmake  vbm_project_envConfig.cmake
install/vbm_project_env/share/vbm_project_env/environment/: ament_prefix_path.dsv  path.dsv
install/vbm_project_env/share/vbm_project_env/launch/: simulation.launch.py
install/vbm_project_env/share/vbm_project_env/urdf/: camera.urdf
install/vbm_project_env/share/vbm_project_env/worlds/: simulation.world
launch/: simulation.launch.py
log/: latest_build
src/: object_sample.cpp
worlds/: simulation.world
